--- a/src/my-warning.html
+++ b/src/my-warning.html
@@ -1,5 +1,8 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../bower_components/iron-flex-layout/iron-flex-layout.html">
+<link rel="import" href="../bower_components/app-route/app-location.html">
 <link rel="import" href="shared-styles.html">
+<link rel="import" href="my-redux.html">
 
 <dom-module id="my-warning">
   <template>
@@ -19,9 +22,13 @@
       .warning{
         @apply(--layout-vertical);
         max-width: 414px;
+        padding-bottom: 50px;
       }
       .warning p {
         @apply(--info-box);
+      }
+      .warning :nth-child(1){
+        width: 145px;
       }
       .warning :nth-child(2){
         color: var(--light-pink-color)
@@ -31,35 +38,53 @@
         width: 100%;
         text-align: center;
         position: fixed;
-        bottom: 0px;
+        bottom: 18px;
       }
       .warning img{
-        width: 165px;
+        width: 120px;
         margin: 0 auto;
         cursor: pointer;
       }
 
     </style>
 
+    <app-location route="{{route}}"></app-location>
+    
     <div class="container">
         <div class="warning">
-            <img src="../assets/skull.svg">
-            <p>Your backup phrase will be displayed on the next page, ensure you are in private.</p>
+            <img src="/assets/skull.svg">
+            <p>{{confirmedPassword}}Your backup phrase will be displayed on the next page, ensure you are in private.</p>
             <p>Anyone who knows your backup phrase has full access to your account!</p>
         </div>
         <a href="/phrase/" class="button">
-          <img src="../assets/buttons/got-it.svg" >
+          <img src="/assets/buttons/got-it.svg" >
         </a>
     </div>
 
   </template>
 
   <script>
-    class MyWarning extends Polymer.Element {
+     class MyWarning extends ReduxMixin(Polymer.Element) {
       static get is() { 
         return 'my-warning'; 
       }
+      static get properties() {
+        return {
+          confirmedPassword: {
+            type: String,
+            statePath: 'password'
+          },
+        };
+      }
 
+
+      connectedCallback(){
+        super.connectedCallback();
+        console.log(this.confirmedPassword)
+        if(!this.confirmedPassword){
+          this.set('route.path', 'login/warning/');
+        }
+      }
 
 
     } window.customElements.define(MyWarning.is, MyWarning);
