--- a/src/my-address.html
+++ b/src/my-address.html
@@ -1,4 +1,6 @@
 <link rel="import" href="../bower_components/polymer/polymer-element.html">
+<link rel="import" href="../bower_components/app-route/app-location.html">
+<link rel="import" href="../bower_components/poly-eth/poly-eth-address.html">
 <link rel="import" href="shared-styles.html">
 
 <dom-module id="my-address">
@@ -6,16 +8,45 @@
     <style include="shared-styles">
       :host {
         display: block;
-
-        padding: 10px;
+        padding: 0px;
+        height: 100vh;
+        @apply(--layout-horizontal);
+        @apply(--layout-center);
+      }
+      .container{
+        @apply(--layout-flex);
+        @apply(--layout-horizontal);
+        @apply(--layout-center-justified);
+      }
+      .address{
+        @apply(--layout-vertical);
+        width: 200px;
+        padding-bottom: 50px;
+      }
+      .address img{
+        margin: 0 auto;
+        padding-top: 20px;
+      }
+      poly-eth-address{
+        margin: 0 auto;
+        max-width: 200px;
+        text-align: center;
+        padding-bottom: 10px;
+        @apply(--passphrase-text)
       }
     </style>
 
-    <div class="card">
-      <div class="circle">3</div>
-      <h1>View Three</h1>
-      <p>Modus commodo minimum eum te, vero utinam assueverit per eu.</p>
-      <p>Ea duis bonorum nec, falli paulo aliquid ei eum.Has at minim mucius aliquam, est id tempor laoreet.Pro saepe pertinax ei, ad pri animal labores suscipiantur.</p>
+    <app-location route="{{route}}"></app-location>
+    <div class="container">
+      <div class="address">
+        <poly-eth-address 
+          qr-width="200"
+          qr-height="200"
+          dark-color="black">
+        </poly-eth-address>
+      </div>
+
+
     </div>
   </template>
 
