--- a/src/my-redux.html
+++ b/src/my-redux.html
@@ -1,6 +1,10 @@
+    <script src="../node_modules/redux/dist/redux.min.js"></script>
+    <link rel="import" href="../bower_components/polymer-redux/polymer-redux.html">
+
 <script>
     let initialState = {
-        language: 'English'
+        language: 'English',
+        password: ''
     };
 
     let reducer = function(state, action){
