--- a/src/my-restore.html
+++ b/src/my-restore.html
@@ -36,6 +36,10 @@
         width: 320px;
         padding-bottom: 50px;
       }
+      poly-eth-restore{
+        max-width: 200px;
+        @apply(--login-join-inputs)
+      }
     </style>
 
     <a href="/login/" class="back">
