--- a/src/shared-styles.html
+++ b/src/shared-styles.html
@@ -12,7 +12,8 @@
       --login-join-inputs: {
         --poly-eth-error-size: 11px;
         --poly-eth-error-color: var(--light-pink-color);
-        --poly-eth-font-size: 28px;
+        --poly-eth-font-size: 20px;
+        --poly-eth-password-font-size: 28px;
         --poly-eth-color: var(--light-pink-color);
         --poly-eth-input-color: var(--light-pink-color);
         --poly-eth-focus-color: var(--white-color);
