--- a/src/my-dapp.html
+++ b/src/my-dapp.html
@@ -53,6 +53,7 @@
           <my-address name="address"></my-address>
           <my-balance name="balance"></my-balance>
           <my-send name="send"></my-send>
+          <my-scan name="scan"></my-scan>
           <my-confirm name="confirm"></my-confirm>
           <my-delivered name="delivered"></my-delivered>
           <my-transactions name="transactions"></my-transactions>
