--- a/src/my-warning.html
+++ b/src/my-warning.html
@@ -36,9 +36,11 @@
       .button {
         display: block;
         width: 100%;
+        height: 70px;
         text-align: center;
         position: fixed;
         bottom: 18px;
+        left: 0px;
       }
       .warning img{
         width: 120px;
@@ -53,7 +55,7 @@
     <div class="container">
         <div class="warning">
             <img src="/assets/skull.svg">
-            <p>{{confirmedPassword}}Your backup phrase will be displayed on the next page, ensure you are in private.</p>
+            <p>Your backup phrase will be displayed on the next page, ensure you are in private.</p>
             <p>Anyone who knows your backup phrase has full access to your account!</p>
         </div>
         <a href="/phrase/" class="button">
