--- a/src/my-phrase.html
+++ b/src/my-phrase.html
@@ -38,9 +38,11 @@
       .button {
         display: block;
         width: 100%;
+        height: 70px;
         text-align: center;
         position: fixed;
         bottom: 18px;
+        left:0px;
       }
     </style>
 
