--- a/src/my-send.html
+++ b/src/my-send.html
@@ -51,11 +51,11 @@
     </style>
 
     <a href="/balance/" class="back">
-      <img src="../assets/icons/mini-back.svg">
+      <img src="/assets/icons/mini-back.svg">
     </a>
 
-    <a href="/scan/" class="scan">
-      <img src="../assets/icons/mini-scan.svg">
+    <a href="/scan/send/" class="scan">
+      <img src="/assets/icons/mini-scan.svg">
     </a>
 
   <poly-eth-send
